Use Harvard fonts, colors

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>HHI Map</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.0/dist/leaflet.css" />
     <link rel="stylesheet" href="/src/leaflet-search.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.typekit.net/jts2rwt.css" />
   </head>
   <body>
     <div id="root"></div>
